--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light px-5 py-4 fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white px-5 py-4 fixed-top">
             <a class="navbar-brand" href="#">CUROS V.I.P.</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -51,6 +51,89 @@
             </div>
         </div>
     </div>
+
+    <section class="blog my-5 m-md-5">
+        <div class="row px-md-5 my-5">
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="images/carrera-de-marketing.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="box-title">
+                            <h5 class="card-title">Carrera de Marketing</h5>
+                        </div>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Leer más</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="images/reto.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="box-title">
+                            <h5 class="card-title">Reto: Construye tu sistema digital de ventas</h5>
+                        </div>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Leer más</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="images/organic-sales.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="box-title">
+                            <h5 class="card-title">Organic sales</h5>
+                        </div>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Leer más</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row px-md-5">
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="images/carrera-de-marketing.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="box-title">
+                            <h5 class="card-title">Carrera de Marketing</h5>
+                        </div>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Leer más</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="images/reto.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="box-title">
+                            <h5 class="card-title">Reto: Construye tu sistema digital de ventas</h5>
+                        </div>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Leer más</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="images/organic-sales.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="box-title">
+                            <h5 class="card-title">Organic sales</h5>
+                        </div>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Leer más</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="my-5">
+        <p class="text-center">cursosmegadrive</p>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
