--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             </div>
         </div>
     </div>
-
-    <section class="blog my-5 m-md-5">
+    <img src="images/wave.svg" class="img-fluid" alt="">
+    <section class="blog my-5 pt-5 m-md-5">
         <div class="row px-md-5 my-5">
             <div class="col-md-4">
                 <div class="card">
