--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </nav>
     </header>
 
-    <div class="home">
+    <section class="home">
         <div class="row px-md-5">
             <div class="col-md-6 my-5 my-md-0 py-5 py-md-0 px-md-5 d-flex justify-content-center align-items-center">
                 <div class="box mt-5 mt-md-0">
@@ -50,8 +50,10 @@
                 <img src="images/20945183.jpg" class="img-fluid" alt="">
             </div>
         </div>
-    </div>
-    <img src="images/wave.svg" class="img-fluid" alt="">
+        <img src="images/wave.svg" class="img-fluid waves" alt="">
+    </section>
+
+    <!--  -->
     <section class="blog my-5 pt-5 m-md-5">
         <div class="row px-md-5 my-5">
             <div class="col-md-4">
