--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-white px-5 py-4 fixed-top">
-            <a class="navbar-brand" href="#">CUROS V.I.P.</a>
+            <a class="navbar-brand" href="#">CURSOS V.I.P.</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <div class="icon" id="nav-icon">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -38,15 +42,17 @@
 
     <section class="home">
         <div class="row px-md-5">
-            <div class="col-md-6 my-5 my-md-0 py-5 py-md-0 px-md-5 d-flex justify-content-center align-items-center">
+            <div class="col-md-6 px-md-5 d-flex justify-content-center align-items-center order-1 order-md-0">
                 <div class="box mt-5 mt-md-0">
                     <h1>CURSOS MEGADRIVE</h1>
                     <p class="my-5">Sitio V.I.P. con el que podrás acceder a cientos de contenido sin acortadores y sin expiración.</p>
-                    <a href="" class="btn">Registrarse</a>
-                    <a href="" class="btn">ingresar</a>
+                    <div class="buttons">
+                        <a href="" class="btn">Registrarse</a>
+                        <a href="" class="btn">ingresar</a>
+                    </div>
                 </div>
             </div>
-            <div class="col-md-6 d-flex justify-content-center align-items-center">
+            <div class="col-md-6 d-flex justify-content-center align-items-center order-0 order-md-1">
                 <img src="images/20945183.jpg" class="img-fluid" alt="">
             </div>
         </div>
@@ -56,7 +62,7 @@
     <!--  -->
     <section class="blog my-5 pt-5 m-md-5">
         <div class="row px-md-5 my-5">
-            <div class="col-md-4">
+            <div class="col-md-6 col-lg-4">
                 <div class="card">
                     <img src="images/carrera-de-marketing.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -68,7 +74,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-6 col-lg-4">
                 <div class="card">
                     <img src="images/reto.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -80,7 +86,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-6 col-lg-4">
                 <div class="card">
                     <img src="images/organic-sales.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -92,9 +98,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row px-md-5">
-            <div class="col-md-4">
+
+            <div class="col-md-6 col-lg-4">
                 <div class="card">
                     <img src="images/carrera-de-marketing.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -106,7 +111,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-6 col-lg-4">
                 <div class="card">
                     <img src="images/reto.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -118,7 +123,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-6 col-lg-4">
                 <div class="card">
                     <img src="images/organic-sales.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -139,9 +144,12 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+    <script src="js/app.js"></script>
+
 </body>
 
 </html>
